--- a/01-drums/index.html
+++ b/01-drums/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS Drum Kit</title>
+  <title>JS 30 - Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,18 +47,26 @@
     </div>
   </div>
 
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="65" src="audio/clap.wav"></audio>
+  <audio data-key="83" src="audio/hihat.wav"></audio>
+  <audio data-key="68" src="audio/kick.wav"></audio>
+  <audio data-key="70" src="audio/openhat.wav"></audio>
+  <audio data-key="71" src="audio/boom.wav"></audio>
+  <audio data-key="72" src="audio/ride.wav"></audio>
+  <audio data-key="74" src="audio/snare.wav"></audio>
+  <audio data-key="75" src="audio/tom.wav"></audio>
+  <audio data-key="76" src="audio/tink.wav"></audio>
 
 <script>
- 
+  window.addEventListener('keydown', function(e){
+    //find associated audio tag by keyCode/data-key attributes, uses ES6 template literals/strings
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    //escape if no element associated with keyCode, else play sound.
+    if(!audio){ return; } 
+    
+    
+    audio.play();
+  });
 </script>
 
 
