Resets sounds for multiple keypresses

--- a/01-drums/index.html
+++ b/01-drums/index.html
@@ -64,7 +64,8 @@
     //escape if no element associated with keyCode, else play sound.
     if(!audio){ return; } 
     
-    
+    //reset sound for repeated key presses
+    audio.currentTime = 0;
     audio.play();
   });
 </script>
