--- a/01-drums/index.html
+++ b/01-drums/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>JS 30 - Drum Kit</title>
   <link rel="stylesheet" href="style.css">
+  <script src ="main.js" ></script>
 </head>
 <body>
-
 
   <div class="keys">
     <div data-key="65" class="key">
@@ -56,31 +56,6 @@
   <audio data-key="74" src="audio/snare.wav"></audio>
   <audio data-key="75" src="audio/tom.wav"></audio>
   <audio data-key="76" src="audio/tink.wav"></audio>
-
-<script>
-  window.addEventListener('keydown', function(e){
-    //find associated audio tag by keyCode/data-key attributes, uses ES6 template literals/strings
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    //find associated key div for visual effects
-    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-
-    //escape if no element associated with keyCode, else play sound.
-    if(!audio){ return; } 
-    
-    //reset sound for repeated key presses
-    audio.currentTime = 0;
-    audio.play();
-    key.classList.add('playing');
-
-  });
-  function removeTransition(e){
-    if (e.propertyName !== 'transform'){return; }
-    this.classList.remove('playing');
-  }
-  const keys = document.querySelectorAll('.key');
-  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-</script>
-
 
 </body>
 </html>
