--- a/02-clock/index.html
+++ b/02-clock/index.html
@@ -61,12 +61,44 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
+    .initialized{
+      transition: all 0.05s;
+    }
+    
 
   </style>
 
-  <script>
 
+  <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+    var initalized = false;
+    function setDate(){
+        const now = new Date();
+        const seconds = now.getSeconds();
+        const minutes = now.getMinutes();
+        const hours = now.getHours();
+        if(seconds ==59){
+          secondHand.style.transition = '';
+        }
+        //transform seconds/mins to percent, then degree
+        //offset by initial 90 degree angle
+        const secondDegrees = ((seconds/60)*360)+90;
+        secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+        const minutesDegrees = ((minutes/60)*360)+90;
+        minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
+        const hourDegrees = ((hours/12)*360)+90
+        hourHand.style.transform = `rotate( ${hourDegrees}deg)`;
+        console.log(seconds);
+      }
+    setInterval(setDate, 1000);
 
   </script>
 </body>
