--- a/04-arrays1/index.html
+++ b/04-arrays1/index.html
@@ -33,7 +33,10 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    var filteredInventors = inventors.filter(function(inventor){
+      return ( 1499 < inventor.year)&&(inventor.year < 1600);
+    });
+    console.table(filteredInventors);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
 
