Updating solution to use ES6

--- a/04-arrays1/index.html
+++ b/04-arrays1/index.html
@@ -33,9 +33,11 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-    var filteredInventors = inventors.filter(function(inventor){
-      return ( 1499 < inventor.year)&&(inventor.year < 1600);
-    });
+    //ES6 version: turn function(item){} into item =>{}
+    //can reduce the code {return ...;} into (bool funct)
+    var filteredInventors = inventors.filter(inventor =>
+        ( 1499 < inventor.year)&&(inventor.year < 1600)  
+    );
     console.table(filteredInventors);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
