--- a/04-arrays1/index.html
+++ b/04-arrays1/index.html
@@ -31,17 +31,23 @@
 
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
+
+    //const: using const for variables that will not be rewritten.
+    
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
     //ES6 version: turn function(item){} into item =>{}
     //can reduce the code {return ...;} into (bool funct)
-    var filteredInventors = inventors.filter(inventor =>
+    const filteredInventors = inventors.filter(inventor =>
         ( 1499 < inventor.year)&&(inventor.year < 1600)  
     );
     console.table(filteredInventors);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+    const inventorNames = inventors.map( inventor =>{
+      return inventor.first+" "+inventor.last;
+    });
+    console.table(inventorNames);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
