--- a/04-arrays1/index.html
+++ b/04-arrays1/index.html
@@ -56,10 +56,14 @@
       return 0;
     });
     console.table(inventorsByBirthdate);
+    /* more compact solution, using ternary and no 0 value
+      const inventorsByBirthdate = inventors.sort( (first, second) => first.year > second.year ? 1: -1);
+    */
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-
+    const yearsLived = inventors.reduce( (sum, inventor) =>{ return sum + (inventor.passed - inventor.year) }, 0);
+    console.log(yearsLived);
     // 5. Sort the inventors by years lived
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
