--- a/04-arrays1/index.html
+++ b/04-arrays1/index.html
@@ -83,16 +83,42 @@
     console.table(inventorsByLifespan)
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-    
 
+    //can be run on the page above
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //               .map(link => link.textContent)
+    //               .filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    function sortByFirstName(personA, personB){
+      let nameA = personA.split(', ')[0];
+      let nameB = personB.split(', ')[0];
+      if(nameA < nameB ){
+        return -1;
+      }
+      if(nameA > nameB){
+        return 1;
+      }
+      return 0;
+    }
+    const peopleByFirstName = people.sort(sortByFirstName );
+    console.log(peopleByFirstName);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const dataCount = data.reduce((collection, item) =>{
+      if(collection.hasOwnProperty(item)){
+        collection[item]++;
+      }else{
+        collection[item] = 1;
+      }
+      return collection;
+    },{});
+    console.table(dataCount);
   </script>
 </body>
 </html>
